--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,38 +1,79 @@
 .form__container{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     padding: 0 55px 55px;
     box-sizing: border-box;
-    top: 200px;
-    /* box-shadow: #000; */
-
+    background-image: url("../assets/images/background.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-repeat:no-repeat;
 }
 
-.form__container__card{
-    border: solid 0.1px;
-    width: 280px;
-    height: auto;
-    border-radius: 10px;
-}
-.form__container__card-form{
-    padding: 10px;
-}
-
-
-.input-box{
-    height: 32px;
-    width: 100%;
-    background: #53fb18d9;
-    border: none;
-    margin: 6px 0;
-    height: auto;
-    padding: 5px;
-    border-radius: 10px;
+.loginbox{
+    width: 320px;
+    background: #000;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
     box-sizing: border-box;
+    padding: 50px 30px;
+}
+
+.avatar{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
+
+.title{
+    margin: 0;
+    padding: 0 0 10px;
+    text-align: center;
+    font-size: 22px;
+}
+
+.loginbox p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.loginbox input{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.loginbox input[type = "text"], input[type = "email"], input[type = "password"]{
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
     outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
+
+.loginbox input[type = "submit"]{
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #fb2525;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
+}
+
+.loginbox input[type = "submit"]:hover{
+    cursor: pointer;
+    background: #ffc107;
     color: #000;
 }
