--- a/src/components/map/Map.css
+++ b/src/components/map/Map.css
@@ -29,3 +29,12 @@ z-index: 99;
 .mapboxgl-popup-content{
   text-align: start;
 }
+
+@media screen  and (max-width: 920px){
+  .menu-map-style{
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+  }
+}
