--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -67,7 +67,7 @@
     outline: none;
     height: 40px;
     background: #fb2525;
-    color: #fff;
+    color: #06421d;
     font-size: 18px;
     border-radius: 20px;
 }
